<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r3live</name>
  <version>1.0.0</version>
  <description>R3LIVE: A Robust, Real-time, RGB-colored, LiDAR-Inertial-Visual tightly-coupled state Estimation and mapping package</description>
  <maintainer email="ziv.lin.ljr@gmail.com">Jiarong.Lin</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
